--- a/templates/components/common/navigation.html
+++ b/templates/components/common/navigation.html
@@ -73,7 +73,7 @@
         </li>
 
         <!-- Wish List -->
-        <a href="#" class="header-top__link navUser-item  flex-align-center custom-animation" data-step-animate="5">
+        <a href="/wishlist.php" class="header-top__link navUser-item  flex-align-center custom-animation" data-step-animate="5">
             <div class="header-top__icon">
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/heart.png" alt="Wish List Icon">
             </div>
