--- a/templates/components/custom/homepage/banner-below-carousel.html
+++ b/templates/components/custom/homepage/banner-below-carousel.html
@@ -1,11 +1,13 @@
 <section class="custom-section-below-carousel bg-main custom-animation" data-step-animate="1">
     <div class="container container-main">
         <div class="section-below-carouse__wrapper flex-between">
-            <h3 class="heading-h3 title">GREASE FINDER</h3>
+            <h3 class="heading-h3 title">{{theme_settings.belowCarousel_banner_title}}</h3>
             <span class="separate"></span>
-            <p class="desc section-text-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .</p>
-            <a href="#" class="btn btn-large btn-primary grease-finder-button">
-                Grease Finder
+            <p class="desc section-text-14">
+                {{theme_settings.belowCarousel_banner_text}}
+            </p>
+            <a href="{{theme_settings.belowCarousel_button_link}}" class="btn btn-large btn-primary grease-finder-button">
+                {{theme_settings.belowCarousel_button_text}}
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/grease-finder-sml.png" alt="Grease Finder">
             </a>
         </div>
