--- a/templates/components/custom/homepage/home-blogs.html
+++ b/templates/components/custom/homepage/home-blogs.html
@@ -1,9 +1,9 @@
 <section class="home-block-post bg-main-2">
     <div class="container container-main">
         <div class="block-header">
-            <h3 class="heading-h3 color-white text-center uppercase">TYGRIS ACADEMY</h3>
+            <h3 class="heading-h3 color-white text-center uppercase">{{theme_settings.home_blog_title}}</h3>
             <p class="section-text-14 color-white text-center">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore Ut enim ad .
+                {{theme_settings.home_blog_description}}
             </p>
         </div>
 
