--- a/templates/components/custom/homepage/banner-button-text.html
+++ b/templates/components/custom/homepage/banner-button-text.html
@@ -1,11 +1,11 @@
-<section class="custom-banner-button-text custom-animation" data-step-animation="1" style="background: url(https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/orange-bg.jpg) center center no-repeat;">
+<section class="custom-banner-button-text custom-animation" data-step-animation="1" style="background: url(https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.global_banner_bg}}) center center no-repeat;">
     <div class="container container-main">
-        <h2 class="heading-h2 uppercase color-body text-center fw-700">Free Technical Audit</h2>
+        <h2 class="heading-h2 uppercase color-body text-center fw-700">{{theme_settings.global_banner_heading}}</h2>
         <p class="section-text color-white text-center">
-            Our technical team can offer application specific recommendations based on your individual requirements
+            {{theme_settings.global_banner_text}}
         </p>
         <div class="flex-center">
-            <a href="#" class="btn btn-primary">FIND OUT MORE</a>
+            <a href="{{theme_settings.global_banner_link}}" class="btn btn-primary">{{theme_settings.global_banner_button}}</a>
         </div>
     </div>
 </section>
