--- a/templates/components/custom/homepage/banner-with-text-1.html
+++ b/templates/components/custom/homepage/banner-with-text-1.html
@@ -3,23 +3,23 @@
         <div class="grid gap-9">
             <div class="row">
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="1">
-                    <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner1.jpg?" alt="Banner With Text Image">
+                    <a href="{{theme_settings.home_section_4_banner_item_1_link}}" class="banner-with-text-link">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_section_4_banner_item_1_image}}" alt="Banner With Text Image">
                     </a>
                 </div>
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="2">
-                    <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner2.jpg?" alt="Banner With Text Image">
+                    <a href="{{theme_settings.home_section_4_banner_item_2_link}}" class="banner-with-text-link">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_section_4_banner_item_2_image}}" alt="Banner With Text Image">
                     </a>
                 </div>
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="3">
-                    <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner3.jpg?" alt="Banner With Text Image">
+                    <a href="{{theme_settings.home_section_4_banner_item_3_link}}" class="banner-with-text-link">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_section_4_banner_item_3_image}}" alt="Banner With Text Image">
                     </a>
                 </div>
                 <div class="col l-4 m-2 s-2 banner-with-text-item custom-animation" data-step-animate="4">
-                    <a href="#" class="banner-with-text-link">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cat-banner4.jpg?" alt="Banner With Text Image">
+                    <a href="{{theme_settings.home_section_4_banner_item_4_link}}" class="banner-with-text-link">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_section_4_banner_item_4_image}}" alt="Banner With Text Image">
                     </a>
                 </div>
             </div>
