--- a/templates/components/custom/homepage/home-slick-banner.html
+++ b/templates/components/custom/homepage/home-slick-banner.html
@@ -1,20 +1,22 @@
 <section class="section-slick-banner">
     <div class="container container-main">
-        <h5 class="heading-h5 custom-home-tilte"><span>Deals of the Month</span></h5>
+        <h5 class="heading-h5 custom-home-tilte"><span>
+            {{theme_settings.home_2_banner_title}}
+        </span></h5>
         <div class="section-slick slick-banner__list" data-slick-show-desktop="2" data-slick-show-tablet="2" data-slick-show-mobile="1">
             <div class="slick-banner__item custom-animation" data-step-animate="1">
-                <a href="#" class="slick-banner__link">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/section-slick-banner-image.png" alt="Slick Banner Image">
+                <a href="{{theme_settings.home_2_banner_item1_link}}" class="slick-banner__link">
+                    <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_2_banner_item1_image}}" alt="Slick Banner Image">
                 </a>
             </div>
             <div class="slick-banner__item custom-animation" data-step-animate="2">
-                <a href="#" class="slick-banner__link">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/section-slick-banner-image.png" alt="Slick Banner Image">
+                <a href="{{theme_settings.home_2_banner_item2_link}}" class="slick-banner__link">
+                    <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_2_banner_item2_image}}" alt="Slick Banner Image">
                 </a>
             </div>
             <div class="slick-banner__item custom-animation" data-step-animate="3">
-                <a href="#" class="slick-banner__link">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/section-slick-banner-image.png" alt="Slick Banner Image">
+                <a href="{{theme_settings.home_2_banner_item3_link}}" class="slick-banner__link">
+                    <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.home_2_banner_item3_image}}" alt="Slick Banner Image">
                 </a>
             </div>
         </div>
