--- a/templates/components/custom/homepage/home-testimonial.html
+++ b/templates/components/custom/homepage/home-testimonial.html
@@ -2,7 +2,9 @@
     <div class="container container-main">
         <div class="testimonial">
             <div class="testimonial__header">
-                <h3 class="heading-h3 color-main uppercase text-center">What people are saying</h3>
+                <h3 class="heading-h3 color-main uppercase text-center">
+                    {{theme_settings.global_testimonial_heading}}
+                </h3>
             </div>
 
             <div class="testimonial__content grid gap-12">
@@ -10,7 +12,7 @@
                     <div class="col l-2 m-2 s-1 custom-animation" data-step-animate="1">
                         <div class="testimonial__item bg-main-2">
                             <p class="color-white testimonial__desc section-text-14">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.
+                                {{theme_settings.global_testimonial_item_1}}
                             </p>
                             <div class="testimonial__review">
                                 <ul class="review__list flex-align-center">
@@ -46,7 +48,7 @@
                     <div class="col l-2 m-2 s-1 custom-animation" data-step-animate="2">
                         <div class="testimonial__item bg-main-2">
                             <p class="color-white testimonial__desc section-text-14">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.
+                                {{theme_settings.global_testimonial_item_2}}
                             </p>
                             <div class="testimonial__review">
                                 <ul class="review__list flex-align-center">
