--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -57,22 +57,22 @@
                 </h3>
                 <ul class="footer-info-list">
                     <li>
-                        <a href="#">MyTYGRIS</a>
+                        <a href="{{theme_settings.footer_column_2_link1}}">{{theme_settings.footer_column_2_text1}}</a>
                     </li>
                     <li>
-                        <a href="#">Sample Request</a>
+                        <a href="{{theme_settings.footer_column_2_link2}}">{{theme_settings.footer_column_2_text2}}</a>
                     </li>
                     <li>
-                        <a href="#">Order Tracking & Returns</a>
+                        <a href="{{theme_settings.footer_column_2_link3}}">{{theme_settings.footer_column_2_text3}}</a>
                     </li>
                     <li>
-                        <a href="#">Shipping & Returns Policy</a>
+                        <a href="{{theme_settings.footer_column_2_link4}}">{{theme_settings.footer_column_2_text4}}</a>
                     </li>
                     <li>
-                        <a href="#">Terms & Conditions</a>
+                        <a href="{{theme_settings.footer_column_2_link5}}">{{theme_settings.footer_column_2_text5}}</a>
                     </li>
                     <li>
-                        <a href="#">Privacy Policy</a>
+                        <a href="{{theme_settings.footer_column_2_link6}}">{{theme_settings.footer_column_2_text6}}</a>
                     </li>
                 </ul>
             </article>
