--- a/templates/components/custom/category/cms-banner-block.html
+++ b/templates/components/custom/category/cms-banner-block.html
@@ -1,4 +1,4 @@
 <div class="custom-category-banner hide-on-tablet">
-    <img class="category-cms-banner" src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cms-banner-1.png" alt="CMS Block Banner 1">
-    <img class="category-cms-banner" src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/cms-banner-2.png" alt="CMS Block Banner 2">
+    <img class="category-cms-banner" src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.category_cms_image_1}}" alt="CMS Block Banner 1">
+    <img class="category-cms-banner" src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/{{theme_settings.category_cms_image_2}}" alt="CMS Block Banner 2">
 </div>
