--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -126,9 +126,9 @@
                     <p class="powered-by">&copy; {{moment format="YYYY"}} TYGRIS | {{lang 'footer.powered_by'}} <a href="https://www.bigcommerce.com?utm_source=merchant&amp;utm_medium=poweredbyBC" rel="nofollow">bspoq</a></p>
 
                     <div class="footer-copy-right-image">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/footer-visa-payment.png" alt="Visa Image">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/footer-paypal-payment.png" alt="Paypal Image">
-                        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/footer-master-card-payment.png" alt="Master Card Image">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/payment-1.png" alt="Visa Image">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/payment-2.png" alt="Paypal Image">
+                        <img src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/images/stencil/original/image-manager/payment-5.png" alt="Master Card Image">
                     </div>
                 </div>
             {{/if}}
