--- a/templates/pages/brand.html
+++ b/templates/pages/brand.html
@@ -27,21 +27,22 @@ brand:
 <h1 class="page-heading">{{brand.name}}</h1>
 {{{region name="brand_below_header"}}}
 <div class="page">
-    <aside class="page-sidebar" id="faceted-search-container">
-        {{> components/brand/sidebar}}
-    </aside>
-
-    <div class="page-content" id="product-listing-container">
-        {{#if brand.search_error }}
-            <p>{{lang 'search.errorMessage'}}</p>
-        {{else}}
-            {{#if brand.products}}
-                {{> components/brand/product-listing}}
+    <div class="container container-1408">
+        <aside class="page-sidebar" id="faceted-search-container">
+            {{> components/brand/sidebar}}
+        </aside>
+        <div class="page-content" id="product-listing-container">
+            {{#if brand.search_error }}
+                <p>{{lang 'search.errorMessage'}}</p>
             {{else}}
-                <p>{{lang 'brands.no_products'}}</p>
+                {{#if brand.products}}
+                    {{> components/brand/product-listing}}
+                {{else}}
+                    <p>{{lang 'brands.no_products'}}</p>
+                {{/if}}
+                {{{region name="brand_below_content"}}}
             {{/if}}
-            {{{region name="brand_below_content"}}}
-        {{/if}}
+        </div>
     </div>
 </div>
 
