--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -2,7 +2,7 @@
 
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-<section class="page">
+<section class="page page-contact-us-layout">
     <div class="container container-1408">
         <div id="contact-us-page" class="page-content page-content--centered custom-contact-us-page">
             {{#if forms.contact.success}}
