--- a/templates/components/faceted-search/index.html
+++ b/templates/components/faceted-search/index.html
@@ -1,7 +1,7 @@
 <div id="facetedSearch" class="facetedSearch sidebarBlock">
     {{> components/faceted-search/selected-facets selected}}
 
-    <a href="#facetedSearch-navList" role="button" class="facetedSearch-toggle toggleLink custom-filter-button-mobile" data-collapsible>
+    <a href="#facetedSearch-navList" role="button" class="facetedSearch-toggle toggleLink custom-filter-button-mobile flex-align-center" data-collapsible>
         <span>Filter:</span>
         
        <svg width="32px" height="40px" viewBox="0 0 1000 1000" data-name="Layer 2" id="Layer_2" xmlns="http://www.w3.org/2000/svg" fill="#000000" transform="rotate(270)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><defs><style>.cls-1{fill:none;stroke:#020202;stroke-linecap:round;stroke-miterlimit:10;stroke-width:22px;}</style></defs><line class="cls-1" x1="184.63" x2="312.9" y1="292.84" y2="292.84"></line><line class="cls-1" x1="541.67" x2="815.37" y1="292.84" y2="292.84"></line><circle class="cls-1" cx="427.04" cy="292.84" r="70.46"></circle><line class="cls-1" x1="815.37" x2="687.1" y1="499.06" y2="499.06"></line><line class="cls-1" x1="458.33" x2="184.63" y1="499.06" y2="499.06"></line><circle class="cls-1" cx="572.96" cy="499.06" r="70.46"></circle><line class="cls-1" x1="815.37" x2="597.03" y1="707.16" y2="707.16"></line><line class="cls-1" x1="368.26" x2="184.63" y1="707.16" y2="707.16"></line><circle class="cls-1" cx="482.89" cy="707.16" r="70.46"></circle></g></svg>
