--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -59,7 +59,7 @@
         {{~inject "currency_selector" currency_selector}}
         {{!-- BundleB2B --}}
     </head>
-    <body class="page-type-{{page_type}}">
+    <body class="page-type-{{page_type}} {{toLowerCase (dashcase page.title)}}">
         <svg data-src="{{cdn 'img/icon-sprite.svg'}}" class="icons-svg-sprite"></svg>
 
         {{> components/common/header }}
