--- a/templates/pages/account/add-wishlist.html
+++ b/templates/pages/account/add-wishlist.html
@@ -1,21 +1,23 @@
 {{#partial "page"}}
-    <div class="account">
-        {{#if settings.show_wishlist}}
-            {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-            <h2 class="page-heading">
-                {{#if forms.wishlist.id}}
-                    {{lang 'account.wishlists.edit'}}
-                {{else}}
-                    {{#if forms.wishlist.action}}
-                        {{lang 'account.wishlists.new'}}
+    <div class="container container-1408">
+        <div class="account">
+            {{#if settings.show_wishlist}}
+                {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
+                <h2 class="page-heading">
+                    {{#if forms.wishlist.id}}
+                        {{lang 'account.wishlists.edit'}}
                     {{else}}
-                        {{lang 'account.wishlists.heading'}}
+                        {{#if forms.wishlist.action}}
+                            {{lang 'account.wishlists.new'}}
+                        {{else}}
+                            {{lang 'account.wishlists.heading'}}
+                        {{/if}}
                     {{/if}}
-                {{/if}}
-            </h2>
-            {{> components/account/navigation account_page='wishlists'}}
-            {{> components/account/add-wishlist}}
-        {{/if}}
+                </h2>
+                {{> components/account/navigation account_page='wishlists'}}
+                {{> components/account/add-wishlist}}
+            {{/if}}
+        </div>
     </div>
 {{/partial}}
 {{> layout/base}}
