--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -18,16 +18,16 @@ blog:
 
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-<section class="page">
-    {{#unless theme_settings.hide_blog_page_heading }}
-        <h1 class="page-heading">{{ blog.name }}</h1>
-    {{/unless}}
-
-    {{#each blog.posts}}
-        {{> components/blog/post post=this theme_settings=../theme_settings}}
-    {{/each}}
-
-    {{> components/common/paginator pagination.blog}}
+<section class="page page-blog">
+    <div class="container container-1408">
+        {{#unless theme_settings.hide_blog_page_heading }}
+            <h1 class="page-heading">{{ blog.name }}</h1>
+        {{/unless}}
+        {{#each blog.posts}}
+            {{> components/blog/post post=this theme_settings=../theme_settings}}
+        {{/each}}
+        {{> components/common/paginator pagination.blog}}
+    </div>
 </section>
 
 {{/partial}}
