--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -479,6 +479,7 @@
                         font-weight: 600;
                         letter-spacing: 0;
                         line-height: 1.53em;
+                        padding-bottom: 11px;
                     }
                 }
             }
